--- a/starship.toml
+++ b/starship.toml
@@ -39,7 +39,7 @@ style = "bold blue"
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 behind = '⇣${count}'
 conflicted = '󰨮'
-stashed = '📦 \ ${count}'
+stashed = '📦 ${count}'
 modified = "modified ${count}"
 
 [nodejs]
