--- a/starship.toml
+++ b/starship.toml
@@ -37,13 +37,13 @@ style = "green"
 
 [git_status]
 format = '([\[$all_status$ahead_behind\]]($style) )'
-ahead = '⇡${count}'
+ahead = '⇡ ${count}'
 style = "bold blue"
-diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
+diverged = '⇕⇡ ${ahead_count} ⇣ ${behind_count}'
+behind = '⇣ ${count}'
 conflicted = '󰨮'
-stashed = '📦 ${count}'
-modified = "modified ${count}"
+stashed = 'stashed ${count}'
+modified = "modified: ${count}"
 
 [nodejs]
 symbol = " "
