--- a/starship.toml
+++ b/starship.toml
@@ -36,9 +36,9 @@ format = "[\\($hash\\)]($style) [\\($tag\\)]($style)"
 style = "green"
 
 [git_status]
-format = '([\[$all_status$ahead_behind\]]($style) )'
+format = '([\[$all_status $ahead_behind\]]($style) )'
 ahead = '⇡ ${count}'
-style = "bold blue"
+style = "bold yellow"
 diverged = '⇕⇡ ${ahead_count} ⇣ ${behind_count}'
 behind = '⇣ ${count}'
 conflicted = '󰨮'
