--- a/starship.toml
+++ b/starship.toml
@@ -36,7 +36,7 @@ format = "[\\($hash\\)]($style) [\\($tag\\)]($style)"
 style = "green"
 
 [git_status]
-format = '([\[$all_status $ahead_behind\]]($style) )'
+format = '([\[$ahead_behind $all_status\]]($style) )'
 ahead = '⇡ ${count}'
 style = "bold yellow"
 diverged = '⇕⇡ ${ahead_count} ⇣ ${behind_count}'
