--- a/starship.toml
+++ b/starship.toml
@@ -11,6 +11,11 @@ symbol = " "
 success_symbol = "[➜](green)"
 error_symbol = "[x](red)"
 
+[time]
+disabled = false
+format = '[\[ $time \]]($style) '
+time_format = '%T'
+
 [directory]
 read_only = " 󰌾"
 read_only_style = "red"
@@ -56,7 +61,6 @@ not_capable_style = "bold red"
 [python]
 symbol = " "
 
-# Output the command duration if over 2 seconds
 [cmd_duration]
 min_time = 2_000
 format = "took [$duration ]($style)"
