--- a/starship.toml
+++ b/starship.toml
@@ -19,7 +19,7 @@ time_format = '%T'
 [directory]
 read_only = " 󰌾"
 read_only_style = "red"
-truncation_length = 5
+truncation_length = 3
 truncate_to_repo = true
 truncation_symbol = '.../'
 format = "[$path]($style)[$read_only]($read_only_style) "
@@ -29,26 +29,30 @@ format = "[$path]($style)[$read_only]($read_only_style) "
 symbol = " "
 
 [git_branch]
-style = "bold yellow"
+style = "bold"
 symbol = " "
 truncation_length = 10
 truncation_symbol = ".../"
 
 [git_commit]
-commit_hash_length = 4
+commit_hash_length = 7
 tag_symbol = "  "
 format = "[\\($hash\\)]($style) [\\($tag\\)]($style)"
 style = "green"
 
 [git_status]
-format = '([\[$ahead_behind $all_status\]]($style) )'
-ahead = '⇡ ${count}'
-style = "bold yellow"
-diverged = '⇕⇡ ${ahead_count} ⇣ ${behind_count}'
-behind = '⇣ ${count}'
-conflicted = '󰨮'
-stashed = 'stashed ${count}'
-modified = "modified: ${count}"
+format = '([\[$ahead_behind$staged$modified$untracked$deleted$renamed$conflicted$stashed\]]($style) )'
+ahead = '⇡${count} '
+behind = '⇣${count} '
+diverged = '⇕⇡${ahead_count} ⇣${behind_count} '
+staged = '[staged: ${count}](green) '
+modified = '[modified: ${count} ](cyan)'
+untracked = '[untracked: ${count} ](blue)'
+deleted = '[deleted: ${count} ](red)'
+renamed = '[renamed: ${count} ](purple)'
+conflicted = '[conflicted: ${count} ](red)'
+stashed = '[stashed: ${count}](green)'
+style = "bold"
 
 [nodejs]
 symbol = " "
